# music-os

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  SECURITY.md  book.toml  clippy.toml  deny.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  docs-site.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs  main.rs
apps/desktop/ui/: index.html
apps/link/: Cargo.toml
apps/link/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
benchmarks/: README.md
crates/ai-providers/: Cargo.toml
crates/ai-providers/src/: lib.rs
crates/ai-runtime/: Cargo.toml
crates/ai-runtime/src/: lib.rs
crates/arrangement/: Cargo.toml
crates/arrangement/src/: lib.rs
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: lib.rs
crates/audio-graph/: Cargo.toml
crates/audio-graph/src/: lib.rs
crates/composition/: Cargo.toml
crates/composition/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: lib.rs
crates/dsp/: Cargo.toml
crates/dsp/benches/: processors.rs
crates/dsp/src/: lib.rs  loudness.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/harmony/: Cargo.toml
crates/harmony/src/: lib.rs
crates/instruments/: Cargo.toml
crates/instruments/src/: lib.rs  soundfont.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/midi/: Cargo.toml
crates/midi-stream/: Cargo.toml
crates/midi-stream/src/: fl.rs  lib.rs
crates/midi/benches/: smf.rs
crates/midi/proptest-regressions/: lib.txt
crates/midi/src/: lib.rs
crates/music-core/: Cargo.toml
crates/music-core/benches/: pattern.rs
crates/music-core/src/: lib.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: lib.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: clap_host.rs  lib.rs
crates/plugin-host/tests/: clap_load.rs  player_load.rs
crates/project-model/: Cargo.toml
crates/project-model/src/: lib.rs
crates/project-service/: Cargo.toml
crates/project-service/src/: lib.rs
crates/render/: Cargo.toml
crates/render/benches/: render.rs
crates/render/src/: lib.rs
crates/rhythm/: Cargo.toml
crates/rhythm/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
docs/: 00_Vision.md  01_Product_Requirements.md  02_System_Architecture.md  03_Domain_Model.md  04_Audio_Architecture.md  05_Music_Core.md  06_AI_Runtime.md  07_MCP_Architecture.md  08_Project_Format.md  09_Plugin_System.md  10_Thread_Model.md  11_Performance_Goals.md  12_Development_Roadmap.md  13_Research.md  README.md  SUMMARY.md
docs/adr/: README.md  template.md
integrations/fl-studio/: device_MusicOS Bridge.py  test_protocol.py
plugins/bitcrusher/: Cargo.toml
plugins/bitcrusher/src/: lib.rs
plugins/clap-gain/: Cargo.toml
plugins/clap-gain/src/: lib.rs
plugins/player/: Cargo.toml
plugins/player/src/: lib.rs
scripts/: check_layers.py  setup.sh  sidecar.py
scripts/hooks/: pre-commit
sdk/python/musicos/: __init__.py  client.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
tests/corpus/v0.1.0/Fixture.musicos/: project.json
tests/corpus/v0.1.0/Fixture.musicos/log/: 000001.jsonl
