[workspace]
resolver = "2"
members = ["apps/cli", "apps/server", "crates/*", "sdk/rust"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/musicos/music-os"
rust-version = "1.79"
publish = false  # publishing begins in Phase 6 (docs/12); crates get versions then

# Single source of truth for dependency versions. Crates opt in with
# `dep = { workspace = true }`. Listed ahead of use so version choices are
# reviewed once, here, not per-crate. (docs/02 §3)
[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
midly = "0.5"
hound = "3.5"
proptest = "1"
criterion = "0.5"

# Internal crates
musicos-core-types = { path = "crates/core-types" }
musicos-music-core = { path = "crates/music-core" }
musicos-harmony = { path = "crates/harmony" }
musicos-timeline = { path = "crates/timeline" }
musicos-midi = { path = "crates/midi" }
musicos-project-model = { path = "crates/project-model" }
musicos-storage = { path = "crates/storage" }
musicos-tools = { path = "crates/tools" }
musicos-dsp = { path = "crates/dsp" }
musicos-instruments = { path = "crates/instruments" }
musicos-render = { path = "crates/render" }
musicos-project-service = { path = "crates/project-service" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "warn"          # audio/FFI crates will allow it locally, with comments
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fight domain code more than they help:
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"  # re-enable once error taxonomy lands (Phase 1)
missing_panics_doc = "allow"  # domain code uses expect() only on provably unreachable states
# Sample-count <-> float casts are pervasive and safe by construction in audio
# code (values << 2^24). Musical time stays integer (ADR-0004) regardless.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
debug = true                  # symbols for flamegraphs
