[package]
name = "musicos-cli"
description = "MusicOS command-line client (`music`)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "music"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
musicos-ai-providers = { workspace = true }
musicos-ai-runtime = { workspace = true }
musicos-core-types = { workspace = true }
musicos-midi = { workspace = true }
musicos-music-core = { workspace = true }
musicos-project-model = { workspace = true }
musicos-storage = { workspace = true }
musicos-tools = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
