[package]
name = "musicos-ai-providers"
description = "Language-model provider adapters (Claude, mock, replay)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
