[package]
name = "musicos-ai-providers"
description = "Language-model provider adapters (Claude, mock, replay)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-ai-runtime = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

[lints]
workspace = true
