[package]
name = "musicos-ai-runtime"
description = "Agent orchestration: sessions, plans, budgets, and provider ports."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
