[package]
name = "musicos-ai-runtime"
description = "Agent orchestration: sessions, plans, budgets, and provider ports."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-tools = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
musicos-core-types = { workspace = true }
musicos-project-model = { workspace = true }
musicos-storage = { workspace = true }

[lints]
workspace = true
