[package]
name = "musicos-arrangement"
description = "Arranger traits and song-section engines."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-core-types = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
