[package]
name = "musicos-audio-engine"
description = "Real-time audio runtime: transport, graph execution, and voice management."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-audio-graph = { workspace = true }
musicos-core-types = { workspace = true }
musicos-project-model = { workspace = true }
musicos-render = { workspace = true }
thiserror = { workspace = true }
cpal = { workspace = true }
rtrb = { workspace = true }

[dev-dependencies]
musicos-music-core = { workspace = true }

[lints]
workspace = true
