[package]
name = "musicos-audio-graph"
description = "Audio graph model, compilation, scheduling, and latency compensation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
