[package]
name = "musicos-composition"
description = "Composer traits and rule-based composition engines."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-core-types = { workspace = true }
musicos-harmony = { workspace = true }
musicos-music-core = { workspace = true }
musicos-rhythm = { workspace = true }

[lints]
workspace = true
