[package]
name = "musicos-config"
description = "Layered configuration: global, workspace, project, and runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
