[package]
name = "musicos-dsp"
description = "DSP processors: EQ, dynamics, delay, reverb, and utility kernels."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
bench = false # criterion benches only; keeps `cargo bench -- --quick` usable

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "processors"
harness = false
