[package]
name = "musicos-harmony"
description = "Music theory engine: pitch classes, scales, chords, progressions, voice leading."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-core-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
