[package]
name = "musicos-instruments"
description = "Built-in instruments: subtractive synthesizer and sampler."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-core-types = { workspace = true }

[lints]
workspace = true
