[package]
name = "musicos-mcp-server"
description = "Model Context Protocol server over the tool registry."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
