[package]
name = "musicos-midi"
description = "Standard MIDI File import/export and internal pattern mapping."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
bench = false # criterion benches only; keeps `cargo bench -- --quick` usable

[dependencies]
musicos-core-types = { workspace = true }
musicos-music-core = { workspace = true }
musicos-timeline = { workspace = true }
midly = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "smf"
harness = false
