[package]
name = "musicos-music-core"
description = "Symbolic music model: notes, patterns, and pattern transformations."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
bench = false # criterion benches only; keeps `cargo bench -- --quick` usable

[dependencies]
musicos-core-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "pattern"
harness = false
