[package]
name = "musicos-plugin-api"
description = "Stable trait interfaces for native MusicOS plugins."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
