[package]
name = "musicos-plugin-host"
description = "Plugin discovery, lifecycle management, and hosted plugin adapters."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-plugin-api = { workspace = true }

[dev-dependencies]
musicos-plugin-bitcrusher = { workspace = true }

[lints]
workspace = true
