[package]
name = "musicos-project-model"
description = "Project aggregate: tracks, clips, automation, commands, and events."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
