[package]
name = "musicos-project-service"
description = "Application service for project command handling, undo, and snapshots."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-core-types = { workspace = true }

[lints]
workspace = true
