[package]
name = "musicos-render"
description = "Offline render pipeline and audio export."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
bench = false # criterion benches only; keeps `cargo bench -- --quick` usable

[dependencies]
musicos-audio-graph = { workspace = true }
musicos-core-types = { workspace = true }
musicos-dsp = { workspace = true }
musicos-instruments = { workspace = true }
musicos-project-model = { workspace = true }
thiserror = { workspace = true }
hound = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
musicos-music-core = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "render"
harness = false
