[package]
name = "musicos-rhythm"
description = "Rhythm engine: meters, grooves, Euclidean rhythms, and rhythmic analysis."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-core-types = { workspace = true }
musicos-music-core = { workspace = true }

[lints]
workspace = true
