[package]
name = "musicos-storage"
description = "Storage ports and filesystem/SQLite adapters."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-project-model = { workspace = true }
musicos-project-service = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
musicos-core-types = { workspace = true }

[lints]
workspace = true
