[package]
name = "musicos-tools"
description = "Canonical tool registry mapping capabilities to CLI and MCP surfaces."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-arrangement = { workspace = true }
musicos-composition = { workspace = true }
musicos-core-types = { workspace = true }
musicos-harmony = { workspace = true }
musicos-music-core = { workspace = true }
musicos-midi = { workspace = true }
musicos-project-model = { workspace = true }
musicos-render = { workspace = true }
musicos-midi-stream = { workspace = true }
musicos-instruments = { workspace = true }
musicos-project-service = { workspace = true }
musicos-storage = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
