[package]
name = "musicos-plugin-bitcrusher"
description = "First-party bitcrusher effect plugin (bit depth + sample-rate reduction)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
musicos-plugin-api = { workspace = true }

[lints]
workspace = true
