[package]
name = "musicos-clap-gain"
description = "A minimal CLAP gain plugin used to exercise the CLAP host in tests."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
clap-sys = { workspace = true }

[lints]
workspace = true
